# Majubom

./: .gitignore  .gitmodules  FIX_NOTES.md  README.md  requirements.txt
TOF/: tof.md
TOF/src/: main.ino  platformio.ini
docs/superpowers/specs/: 2026-06-15-csi-server-integration-design.md  2026-06-23-majubom-interactive-presentation-design.md  2026-06-24-csi-mmwave-fusion-honest-direction.md
esp32/: CSI_HRV_진단결과_의사결정.md  CSI_HRV_진행정리.md  CSI_JSON_명세_상세.md  README_CSI_HRV.md  csi_hold.csv  csi_hold2.csv  csi_hold3.csv  csi_hold4.csv  csi_rest.csv  csi_rest2.csv  csi_watch1.csv  csi_watch2.csv  csi_watch3.csv  diag_fix.py  diag_hold.py  diag_hold2.py  diag_hold3.py  diag_hold4.py  diag_hr.py  parse_csi.py  presence_cnn.py  record_csi.py  record_csi_win.py  send_csi.py  vital_csi.py  vital_csi2.py  vital_csi3.py  서버연동_변경사항.md  시스템_데이터흐름_웹명세.md  작업2_측정계획.md
esp32/csi_http/: CMakeLists.txt  sdkconfig  sdkconfig.defaults
esp32/csi_http/main/: CMakeLists.txt  app_main.c
esp32/csi_tx_softap/: sdkconfig
esp32/docs/: README.md  hub.html  serve_ppt.sh
esp32/docs/csi_explainer/: index.html
esp32/docs/dashboard/: index.html
esp32/docs/datasheet_guide/: index.html
esp32/docs/dday_demo/: baseline.json  index.html
esp32/docs/mock_dashboard/: index.html
esp32/docs/paper_review/: index.html
esp32/docs/paper_review_B/: fulltext.txt  index.html
mmWave/: AOP_v_C_legs_safe.cfg  AOP_wall_chest.cfg  send_mmw.py
server/: csi_logic.py  csi_server.py  db.py  majubom.db  mmw_logic.py  mmw_server.py  run_all.py  server.md  tof_server.py
site/: index.html
(+7 files in other folders)
